# jt

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
src/: jt.cppm  main.cpp
src/detail/: allocator.cpp  allocator.cppm  atomic_intrusive_queue.cppm  buffer.cppm  cache_line.cppm  config.h  cpu_pause.cppm  deque.cppm  intrusive_mpsc_queue.cppm  intrusive_queue.cppm  intrusive_queue.h  memory.cpp  memory.cppm  metric_value.cppm  os.cppm  string.cppm  unordered_map.cppm  vector.cppm
src/detail/impl/: buffer.cpp  buffer_impl.cpp  memory.cpp  os.cpp
src/log/: default_formatter.cppm  formatter.cppm  functions.cppm  fwd.cppm  level.cppm  logger.cppm  message.cppm  service.cppm  sink.cppm  sink_console.cppm  sink_file.cppm
src/log/impl/: logger.cpp  service.cpp  sink.cpp  sink_console.cpp  sink_file.cpp
src/types/: writable_buffer.cppm
